--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -131,20 +131,20 @@
 	padding-right: 0
 	height: auto
 	color: $text-300
-	&[aria-expanded="false"]
-		svg
-			transform: scaleY(-1)
-
-	svg
+	&[aria-expanded="true"]
+		.icon
+			transform: scaleY(1)
+	.icon
+		flex: 0 0 auto
 		width: 16px
 		height: 16px
 		margin-left: 8px
 		fill: $text-200
-		transform: scaleY(1)
+		transform: scaleY(-1)
 		transition: transform .3s ease, fill .3s ease
 	&:hover
 		color: $orange
-		svg
+		.icon
 			fill: $orange
 
 
