--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -48,7 +48,21 @@
 	&:hover
 		background-color: $text-200
 	&:active
-		background-color: $text-200
+		background-color: $text-300
+
+.btn.btn-outline
+	padding-left: 18px
+	padding-right: 18px
+	border: 1px solid $border
+	background-color: $white
+	color: $text-200
+	&:hover
+		border-color: $bg
+		background-color: $bg
+		color: $orange
+	&:active
+		border-color: $bg-hover
+		background-color: $bg-hover
 
 
 /* ==========================================================================
