--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -2,7 +2,7 @@
 	 Base customize for forms
 	 ========================================================================== */
 ::placeholder
-	color: #999
+	color: $text-200
 
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
@@ -26,6 +26,10 @@ input, textarea
 	// &:required:valid
 	// 	border-color: $text-200
 
+input:not(:placeholder-shown),
+textarea:not(:placeholder-shown)
+	border-bottom-color: $orange
+
 label
 	cursor: pointer
 	word-break: break-word
@@ -42,7 +46,7 @@ label
 		border-radius: 0
 		border: 0
 		border-bottom: 1px solid $text-200
-		background-color: $white
+		background-color: $trsp
 		background-clip: padding-box
 		color: $text-200
 		font-size: 15px
@@ -63,8 +67,9 @@ label
 
 	// Textarea
 	&-textarea
-		resize: none
-		padding: 16px
+		min-height: 56px
+		padding-top: 16px
+		padding-bottom: 16px
 
 	// Checkbox
 	&-checkbox
@@ -200,7 +205,26 @@ label
 		background: $white url('../images/icons/dropdown-arrow.svg') no-repeat right 8px center / 26px
 		&:focus
 			color: $text-200
-			box-shadow: 0 0 0 2px #7BE693
+			box-shadow: 0 0 0 2px $orange
+
+	// File upload
+	&-file
+		position: relative
+		input[type="file"]
+			display: none
+		&:hover
+			.form-file-placeholder
+				color: $orange
+		&-placeholder
+			display: flex
+			align-items: center
+			color: $text-200
+			transition: color .3s ease
+			.icon
+				flex: 0 0 auto
+				width: 32px
+				height: 32px
+				margin-right: 16px
 
 	// Error notice
 	&-error-notice
@@ -224,22 +248,32 @@ label
 	// Form label + placeholder
 	&-placeholder
 		position: relative
-		height: 100%
-		input::placeholder
+
+		input::placeholder,
+		textarea::placeholder
 			opacity: 0
-		input:not(:placeholder-shown)
-			padding-top: 10px
-			border-bottom-color: $orange
+
+		input:not(:placeholder-shown),
+		textarea:not(:placeholder-shown)
 			~ span
-				top: 0
 				color: $text-400
 				font-size: 13px
+		input:not(:placeholder-shown)
+			padding-top: 10px
+			~ span
+				top: 0
 				transform: none
+		textarea:not(:placeholder-shown)
+			padding-top: 10px
+			~ span
+				top: -10px
+
 		label
 			display: flex
 			align-items: center
 			height: 100%
 			margin-bottom: 0
+
 		span
 			cursor: text
 			pointer-events: none
@@ -253,4 +287,8 @@ label
 			line-height: 1
 			transform: translateY(-50%)
 			transition: .1s ease-in-out
+
+		textarea ~ span
+			top: 4px
+			transform: none
 
