--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -11,7 +11,7 @@
 		visibility: hidden
 		opacity: 0
 		transform: translateY(-100%)
-		transition: .3s ease-in-out
+		transition: opacity .3s ease-in-out, visibility .3s ease-in-out, transform .3s ease-in-out
 		.header-middle
 			padding-top: 12px
 			padding-bottom: 12px
@@ -320,7 +320,6 @@
 					span
 						color: $text-400
 				&-input
-					height: 100%
 					padding-left: 0
 					padding-right: 14px
 					border: 0
