--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -11,7 +11,7 @@
 		margin-right: 6px
 	> span
 		color: $text-200
-		+font-size(xs)
+		+font-size(sm)
 		&:not(:last-child)
 			margin-right: 8px
 
@@ -113,13 +113,8 @@
 
 	// Price slider
 	&-price
-		overflow: hidden
 		display: flex
 		height: 56px
-		margin-top: 8px
-		margin-right: -4px
-		margin-left: -8px
-		padding: 8px
 		&-label
 			flex: 0 0 auto
 			align-self: center
