--- a/app/sass/components/_modals.sass
+++ b/app/sass/components/_modals.sass
@@ -6,7 +6,7 @@
 	padding-left: 0!important
 	&.fade
 		.modal-dialog
-			transform: translateY(10px)
+			transform: scale(0.95)
 	&.show
 		.modal-dialog
 			transform: none
