--- a/app/sass/pages/_catalog.sass
+++ b/app/sass/pages/_catalog.sass
@@ -72,6 +72,9 @@
 		line-height: 20px
 		text-align: center
 		word-break: break-word
+		+media-breakpoint-down(xs)
+			min-height: 54px
+			+font-size(xs)
 		&:hover
 			border-color: $bg
 			background-color: $bg
