--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -210,6 +210,7 @@ label
 	// File upload
 	&-file
 		position: relative
+		margin-bottom: 0
 		input[type="file"]
 			display: none
 		&:hover
@@ -219,6 +220,7 @@ label
 			display: flex
 			align-items: center
 			color: $text-200
+			line-height: 20px
 			transition: color .3s ease
 			.icon
 				flex: 0 0 auto
