--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -8,6 +8,7 @@
 		left: 0
 		right: 0
 		z-index: 100
+		border-bottom: 0
 		visibility: hidden
 		opacity: 0
 		transform: translateY(-100%)
@@ -17,6 +18,9 @@
 			padding-bottom: 12px
 			box-shadow: $box-shadow-2
 			background-color: $white
+			+media-breakpoint-down(lg)
+				padding-top: 8px
+				padding-bottom: 8px
 			.burger
 				display: block
 				&-megamenu
@@ -55,6 +59,8 @@
 	position: relative
 	z-index: 99
 	background-color: $white
+	+media-breakpoint-down(xl)
+		border-bottom: 1px solid $border
 
 	&-top
 		padding-top: 10px
@@ -158,6 +164,9 @@
 			padding-top: 12px
 			padding-bottom: 12px
 			background-color: $white
+		+media-breakpoint-down(md)
+			padding-top: 8px
+			padding-bottom: 8px
 
 		// Burgers (Megamenu & Mobile menu)
 		.burger
