--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -4,6 +4,7 @@
 .product-country
 	display: flex
 	align-items: center
+	flex-wrap: wrap
 	margin-top: 8px
 	> img
 		width: 16px
@@ -12,6 +13,8 @@
 	> span
 		color: $text-200
 		+font-size(sm)
+		+media-breakpoint-down(xs)
+			+font-size(xs)
 		&:not(:last-child)
 			margin-right: 8px
 
@@ -80,13 +83,15 @@
 	overflow-x: auto
 	display: flex
 	margin-top: 48px
-	margin-bottom: 32px
+	margin-bottom: 24px
 	&-item
 		position: relative
 		border-bottom: 1px solid $trsp
 		transition: border-color .3s ease
 		&:not(:last-child)
 			margin-right: 40px
+			+media-breakpoint-down(xs)
+				margin-right: 20px
 		&:hover
 			border-bottom-color: $text-400
 		&._current
@@ -109,7 +114,69 @@
 	 Shop filters
 	 ========================================================================== */
 .shop-filters
-	margin-bottom: 30px
+	margin-bottom: 24px
+
+	&-actions
+		display: flex
+		align-items: center
+		justify-content: flex-end
+		+media-breakpoint-down(md)
+			justify-content: space-between
+			margin-bottom: 24px
+
+	// Close filters button
+	&-close
+		&.btn
+			display: none
+			padding: 0
+			+media-breakpoint-down(md)
+				display: block
+
+	// Reset filters button
+	&-reset
+		display: inline-flex
+		align-items: center
+		color: $orange
+		visibility: hidden
+		opacity: 0
+		transition: $trs
+		&._is-shown
+			visibility: visible
+			opacity: 1
+		&:hover
+			color: $text-200
+		> span
+			+font-size(xs)
+		> .icon
+			width: 16px
+			height: 16px
+			margin-left: 8px
+
+	// Filters form
+	&-form
+		margin-bottom: 30px
+		+media-breakpoint-down(md)
+			pointer-events: none
+			overflow-x: hidden
+			position: fixed
+			top: 0
+			left: 0
+			right: 0
+			bottom: 0
+			z-index: 999
+			max-width: 320px
+			margin-bottom: 0
+			padding: 16px
+			background-color: $white
+			visibility: hidden
+			opacity: 0
+			transform: translateX(-10px)
+			transition: $trs
+		&._is-active
+			pointer-events: auto
+			visibility: visible
+			opacity: 1
+			transform: none
 
 	// Price slider
 	&-price
@@ -126,6 +193,8 @@
 
 	// Dropdown with checkboxes
 	&-item
+		+media-breakpoint-down(md)
+			margin-top: 16px
 		&._is-active
 			.btn.btn-dropdown
 				border-bottom-color: $text-200
@@ -144,7 +213,17 @@
 			text-align: left
 		.dropdown-menu
 			width: 100%
-			padding-bottom: 16p
+			padding-bottom: 16px
+			&::before
+				left: 50%
+				transform: translateX(-50%)
+			+media-breakpoint-down(md)
+				position: static !important
+				transform: none !important
+				padding: 0
+				box-shadow: none
+				&::before
+					display: none
 	&-name
 		position: relative
 		overflow: hidden
@@ -170,32 +249,58 @@
 			&:last-child
 				margin-bottom: 0
 
-
-/* ==========================================================================
-	 Shop filters
-	 ========================================================================== */
-.shop-sort
-	margin-bottom: 24px
-	&-label
-		flex: 0 0 auto
-		margin-right: 16px
-		color: $text-300
-		+font-size(xs)
-	&-list
-		display: inline-flex
-		flex-wrap: wrap
-		> a
-			padding: 8px
-			background-color: $trsp
+	// Sort
+	&-sort
+		+media-breakpoint-down(md)
+			display: none
+		&-label
+			flex: 0 0 auto
+			margin-right: 16px
 			color: $text-300
 			+font-size(xs)
-			&:not(:last-child)
-				margin-right: 16px
-			&:hover
-				color: $text-200
-				background-color: #f5f5f5
-			&._is-active
-				pointer-events: none
-				background-color: $bg
-				color: $orange
+		&-list
+			display: inline-flex
+			flex-wrap: wrap
+			> a
+				padding: 8px
+				background-color: $trsp
+				color: $text-300
+				+font-size(xs)
+				&:not(:last-child)
+					margin-right: 16px
+				&:hover
+					color: $text-200
+					background-color: #f5f5f5
+				&._is-active
+					pointer-events: none
+					background-color: $bg
+					color: $orange
 
+	// Toggle filters button
+	&-mobile
+		display: none
+		+media-breakpoint-down(md)
+			display: flex
+			align-items: center
+			justify-content: space-between
+		.sort
+			&-list
+				> a
+					display: block
+					padding-top: 2px
+					padding-bottom: 2px
+					font-size: 14px
+					&._is-active
+						pointer-events: none
+						color: $orange
+		.filters
+			&-btn.btn
+				height: auto
+				padding-left: 0
+				padding-right: 0
+				&:hover
+					color: $orange
+				> .icon
+					width: 24px
+					height: 24px
+					margin-right: 8px
