--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -313,3 +313,14 @@
 					width: 24px
 					height: 24px
 					margin-right: 8px
+
+
+/* ==========================================================================
+	 Shop promo banner
+	 ========================================================================== */
+.shop-promo
+	display: block
+	text-align: center
+	picture
+		display: block
+
