Search results page. Code refactoring

--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -114,7 +114,9 @@
 	 Shop filters
 	 ========================================================================== */
 .shop-filters
-	margin-bottom: 24px
+	margin-bottom: 32px
+	+media-breakpoint-down(md)
+		margin-bottom: 24px
 
 	&-actions
 		display: flex
