Collection single page: mobile responsive

--- a/app/sass/components/_tables.sass
+++ b/app/sass/components/_tables.sass
@@ -48,8 +48,12 @@ table
 		.attribute
 			width: 40%
 			color: $text-300
+			+media-breakpoint-down(xs)
+				width: 50%
 		.value
 			width: 60%
 			padding-left: 6px
 			color: $text-200
+			+media-breakpoint-down(xs)
+				width: 50%
 
