--- a/app/sass/pages/_collection-single.sass
+++ b/app/sass/pages/_collection-single.sass
@@ -34,6 +34,14 @@
 			&-photo
 				position: relative
 				height: 498px
+				+media-breakpoint-down(xl)
+					height: 420px
+				+media-breakpoint-down(sm)
+					height: 280px
+				+media-breakpoint-down(xs)
+					height: 200px
+				+media-breakpoint-down(xxs)
+					height: 160px
 				&:hover
 					.gallery-photo-zoom > span
 						visibility: visible
@@ -61,15 +69,25 @@
 						font-size: 48px
 						visibility: hidden
 						opacity: 0
+						will-change: transform
 						transform: scale(0.95)
 						transition: $trs
+						+media-breakpoint-down(sm)
+							width: 60px
+							height: 60px
+							font-size: 32px
 						&:hover
 							background-color: $orange
 							color: $white
 
 		// Description
 		.description
+			+media-breakpoint-down(xs)
+				margin-bottom: 32px
 			&-text
+				+media-breakpoint-down(xs)
+					font-size: 14px
+					line-height: 22px
 				> p:not(:first-child)
 					display: none
 
@@ -107,6 +125,8 @@
 				display: flex
 				width: 100%
 				margin-bottom: 8px
+				+media-breakpoint-down(xs)
+					flex-wrap: wrap
 				.form-control
 					flex: 1 1 auto
 					height: 40px
@@ -114,8 +134,13 @@
 					padding-right: 12px
 					border: 0
 					background-color: $border
+					+media-breakpoint-down(xs)
+						flex-basis: 100%
 				.btn
 					flex: 0 0 auto
+					border-color: #DFE3E8
+					+media-breakpoint-down(xs)
+						flex-basis: 100%
 
 		// Attributes
 		.attributes
@@ -162,3 +187,35 @@
 					margin-right: 8px
 				&:hover
 					opacity: 0.75
+
+	// Section: Collection products
+	.collection-products
+		&-tabs
+			position: relative
+			+media-breakpoint-down(lg)
+				&::after
+					content: ''
+					pointer-events: none
+					position: absolute
+					top: 0
+					right: 0
+					z-index: 1
+					width: 60px
+					height: 100%
+					background: linear-gradient(to right, rgba($white, 0) 0%, rgba($white, 1) 100%)
+				.nav-tabs
+					overflow-x: auto
+					flex-wrap: nowrap
+					white-space: nowrap
+					padding-right: 30px
+					> a:last-child
+						position: relative
+						z-index: 2
+		&-list
+			+media-breakpoint-down(md)
+				overflow-x: auto
+				flex-wrap: nowrap
+				> [class*="col"]
+					flex: 0 0 224px
+				> [class*="col-12"]
+					display: none
