Product single page

--- a/app/sass/components/_tables.sass
+++ b/app/sass/components/_tables.sass
@@ -46,12 +46,11 @@ table
 					color: $text-200
 					border-bottom-color: $text-300
 		.attribute
-			width: 40%
+			width: 164px
 			color: $text-300
 			+media-breakpoint-down(xs)
 				width: 50%
 		.value
-			width: 60%
 			padding-left: 6px
 			color: $text-200
 			+media-breakpoint-down(xs)
