--- a/app/sass/components/_quantity.sass
+++ b/app/sass/components/_quantity.sass
@@ -30,6 +30,7 @@
 		height: 32px
 		padding: 4px
 		font-size: 32px
+		will-change: transform
 		.icon
 			fill: $text-200
 			transition: fill .3s ease
