--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -29,9 +29,9 @@
 	margin-top: 8px
 	> del
 		color: $text-400
+		padding-right: 8px
 		~ ins
 			color: $orange
-			flex: 0 0 100%
 	> ins
 		color: $text-200
 		+font-size(lg)
