--- a/app/sass/pages/_product.sass
+++ b/app/sass/pages/_product.sass
@@ -229,10 +229,10 @@
 						position: relative
 						z-index: 2
 		&-list
-			+media-breakpoint-down(md)
-				overflow-x: auto
-				flex-wrap: nowrap
-				> [class*="col"]
-					flex: 0 0 224px
-				> [class*="col-12"]
-					display: none
+			> [class*="col-12"]
+				+media-breakpoint-down(sm)
+					flex-basis: 50%
+					max-width: 50%
+				+media-breakpoint-down(xs)
+					flex-basis: 100%
+					max-width: 100%
