Checkout form refactoring, added privacy policy checkbox

--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -33,6 +33,10 @@ textarea:not(:placeholder-shown)
 label
 	cursor: pointer
 	word-break: break-word
+	a
+		color: $orange
+		&:hover
+			color: $text-200
 
 .form
 	position: relative
