--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -1,6 +1,6 @@
 /* ==========================================================================
-	 Base customize for cards
-	 ========================================================================== */
+ Base customize for cards
+ ========================================================================== */
 .card
 	position: relative
 	display: block
@@ -15,10 +15,9 @@
 			display: inline-block
 			word-break: break-word
 
-
 /* ==========================================================================
-	 Brand card
-	 ========================================================================== */
+ Brand card
+ ========================================================================== */
 .card-brand
 	.card-photo
 		height: 208px
@@ -31,10 +30,9 @@
 			margin-top: 8px
 			color: $text-300
 
-
 /* ==========================================================================
-	 Collection card
-	 ========================================================================== */
+ Collection card
+ ========================================================================== */
 .card-collection
 	height: auto
 	z-index: 1
@@ -124,6 +122,20 @@
 			position: relative
 			z-index: 2
 			background-color: $white
+			&._is-loading
+				pointer-events: none
+				&::after
+					content: ''
+					position: absolute
+					top: 0
+					left: 0
+					z-index: 1
+					display: flex
+					align-items: center
+					justify-content: center
+					width: 100%
+					height: 100%
+					background: rgba($white, 0.85) url('../images/loader.gif') no-repeat center/46px
 			&._is-toggled
 				.exemplars-title
 					display: block
@@ -199,10 +211,9 @@
 							flex: 0 0 50%
 							word-break: break-all
 
-
 /* ==========================================================================
-	 Product card
-	 ========================================================================== */
+ Product card
+ ========================================================================== */
 .card-product
 	z-index: 1
 	height: auto
@@ -280,10 +291,9 @@
 				.value
 					color: $text-300
 
-
 /* ==========================================================================
-	 Article card
-	 ========================================================================== */
+ Article card
+ ========================================================================== */
 .card-article
 	.card-photo
 		height: 208px
@@ -295,5 +305,3 @@
 		.excerpt
 			margin-top: 8px
 			margin-bottom: 0
-
-
