--- a/app/sass/pages/_collection.sass
+++ b/app/sass/pages/_collection.sass
@@ -143,7 +143,7 @@
 			&-list
 				> li
 					display: flex
-					.attribute,
+					.attr,
 					.value
 						position: relative
 						vertical-align: top
@@ -159,7 +159,7 @@
 							&:hover
 								color: $text-200
 								border-bottom-color: $text-300
-					.attribute
+					.attr
 						flex: 0 0 auto
 						width: 164px
 						color: $text-300
