--- a/app/sass/pages/_product.sass
+++ b/app/sass/pages/_product.sass
@@ -165,7 +165,7 @@
 			&-list
 				> li
 					display: flex
-					.attribute,
+					.attr,
 					.value
 						position: relative
 						vertical-align: top
@@ -181,7 +181,7 @@
 							&:hover
 								color: $text-200
 								border-bottom-color: $text-300
-					.attribute
+					.attr
 						flex: 0 0 auto
 						width: 164px
 						color: $text-300
