--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -121,6 +121,7 @@
 		.exemplars
 			position: relative
 			z-index: 2
+			min-height: 46px
 			background-color: $white
 			&._is-loading
 				pointer-events: none
@@ -129,7 +130,7 @@
 					position: absolute
 					top: 0
 					left: 0
-					z-index: 1
+					z-index: 33
 					display: flex
 					align-items: center
 					justify-content: center
@@ -190,7 +191,7 @@
 				z-index: 1
 				visibility: hidden
 				opacity: 0
-			> ul
+			&-list
 				> li
 					position: relative
 					z-index: 1
