Shop filters function refactoring. Show more exemplars function refactoring

--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -171,7 +171,8 @@
 		display: block
 
 .show-more,
-.readmore
+.readmore,
+.exemplars-more
 	.btn-more--show
 		pointer-events: none
 		visibility: hidden
