--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -140,14 +140,15 @@
 			&._is-toggled
 				.exemplars-title
 					display: block
+			&-cloned
+				margin-top: 16px
 			&-item
 				display: none
 				margin-top: 16px
-				&:nth-child(1)
-					display: block
 			&-title
 				display: none
 				margin-bottom: 8px
+			&-cloned-list,
 			&-list
 				display: flex
 				flex-wrap: wrap
