--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -245,6 +245,8 @@
 		overflow: hidden
 		flex: 1 1 auto
 		display: flex
+		padding-top: 5px
+		padding-bottom: 5px
 		&::after
 			content: ''
 			pointer-events: none
